Styled the webpage more

--- a/password.css
+++ b/password.css
@@ -1,8 +1,12 @@
 .jumbotron {
     max-width: 960px;
     margin: 0 auto;
-    border: 4px dotted palegreen;
+    border: 4px dotted darkgrey;
     border-bottom: 10px solid black;
+}
+
+body {
+    background-color: lightcoral;
 }
 
 h2 {
@@ -28,7 +32,7 @@ h2 {
     margin: 0 auto;
     padding-top: 25px;
     background-color: white;
-    border: 4px dotted palegreen;
+    border: 4px dotted darkgray;
     border-top: none;
 }
 
