--- a/password.css
+++ b/password.css
@@ -45,3 +45,15 @@ h2 {
 .content {
     margin: 10% 5% 10% 5%;
 }
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
+  }
