--- a/password.css
+++ b/password.css
@@ -11,6 +11,7 @@ body {
 
 h2 {
     margin-bottom: 25px;
+    color: darkslategrey;
 }
 
 .display-4 {
@@ -56,4 +57,8 @@ textarea {
     background-color: #f8f8f8;
     font-size: 16px;
     resize: none;
+  }
+
+  h1 {
+      color: darkslategrey;
   }
